footer wrap img fix

--- a/css/style.css
+++ b/css/style.css
@@ -424,7 +424,7 @@
         margin: 25px;
     }
     .footer_wrap img {
-        max-width: 170px;
+        max-width: 150px;
     }
     .footer_wrap p {
         margin: 0;
